--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,9 @@
     "watch": "deno run -A --watch ./src/main.ts"
   },
   "imports": {
+    "@atcute/cbor": "npm:@atcute/cbor@^2.2.5",
+    "@atcute/cid": "npm:@atcute/cid@^2.2.3",
+    "@atcute/uint8array": "npm:@atcute/uint8array@^1.0.3",
     "@char/justin": "jsr:@char/justin@^0.3.5",
     "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
     "@oak/oak": "jsr:@oak/oak@^17.1.5",
