--- a/deno.json
+++ b/deno.json
@@ -14,6 +14,7 @@
     "@atcute/uint8array": "npm:@atcute/uint8array@^1.0.3",
     "@char/justin": "jsr:@char/justin@^0.3.5",
     "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
+    "@noble/hashes": "jsr:@noble/hashes@^1.8.0",
     "@oak/oak": "jsr:@oak/oak@^17.1.5",
     "@std/assert": "jsr:@std/assert@^1.0.13",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
